no Jira- enable dynamic jvm loading for integration tests to remove build warning